--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,14 +8,16 @@
 	"private": true,
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
-		"build": "tsc",
-		"lint": "eslint --fix ."
+		"build": "esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.js",
+		"lint": "eslint --fix .",
+		"start": "node dist/index.js"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.19",
 		"@types/ws": "^8.5.4",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
+		"esbuild": "^0.17.10",
 		"eslint": "^8.33.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
