--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ server {
 server {
 	listen 80;
 
-	server_name backend.${SERVER_NAME};
+	server_name backend-${SERVER_NAME};
 
 	location / {
 		proxy_http_version 1.1;
