--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - AUTH_TOKEN=${AUTH_TOKEN}
       - PUBLIC_BACKEND_HOST=backend-${HOST}
       - PUBLIC_BACKEND_PORT=443
-      - PUBLIC_TURN_IP=turn.${HOST}
+      - PUBLIC_TURN_HOST=turn-${HOST}
       - ORIGIN=https://${HOST}
     command: [ "pnpm", "start:frontend" ]
     depends_on:
@@ -29,21 +29,6 @@ services:
     restart: unless-stopped
     environment:
       ETURNAL_SECRET: ${AUTH_TOKEN}
-  # turn:
-  #   image: coturn/coturn:4.6.1-alpine
-  #   network_mode: host
-  #   command:
-  #     [
-  #       "-a",
-  #       "-u",
-  #       "coturn:${AUTH_TOKEN}",
-  #       "-r",
-  #       "proximity",
-  #       "-X",
-  #       "${IP}"
-  #     ]
-  #   volumes:
-  #     - ./coturn.conf:/etc/coturn/turnserver.conf:ro
   nginx:
     image: nginx:1.23.3-alpine
     environment:
