--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"build": "turbo run build",
 		"dev": "turbo run dev",
 		"lint": "turbo run lint",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
+		"format": "prettier --write \"**/*.{ts,tsx,svelte,md}\"",
 		"start:backend": "cd apps/backend && pnpm start",
 		"start:frontend": "cd apps/frontend && pnpm start"
 	},
